# Automate_AWS_With_Python_Tasks

./: README.md
1st_week/: task3.py
2nd_week/: task2.py  task3.py
2nd_week/task4/task4/: __init__.py
first_week/: task1.py  task2.py
second_week/task4/: pyproject.toml
second_week/task4/task4/: .env
